src/renderer/src/assets/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  #root {
    @apply h-full;
  }

  html, body {
    @apply h-full;

    @apply select-none;

    @apply bg-black/30;

    @apply antialiased text-white;

    @apply overflow-hidden;
  }

  header {
    -webkit-app-region: drag;
  }

  button {
    -webkit-app-region: no-drag;
  }

  ::-webkit-scrollbar {
    @apply w-2;
  }

  ::-webkit-scrollbar-thumb {
    @apply bg-[#555] rounded-md;
  }

  ::-webkit-scrollbar-track {
    @apply bg-transparent;
  }

  input[type='range']::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 15px;
  height: 15px;
  background: #ccc;
  border-radius: 50%;
  cursor: pointer;
  }

  input[type='range']::-moz-range-thumb {
    width: 15px;
    height: 15px;
    background: #ccc;
    border-radius: 50%;
    cursor: pointer;
  }
}

